sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: ')' expected but integer literal found.
		if(ecart>(Float)1){
                                ^AlgCombSort:11: error: illegal start of simple expression
		while(i+ecart<getNombreValeurs()){
                                                ^